--- a/welcomeBro/mainWindow.storyboard
+++ b/welcomeBro/mainWindow.storyboard
@@ -62,14 +62,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="gaf-hK-cX8">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="1rb-ak-WOo">
+                        <barButtonItem key="rightBarButtonItem" id="1rb-ak-WOo">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fXl-6A-3qQ">
-                                <rect key="frame" x="16" y="5" width="71" height="33"/>
+                                <rect key="frame" x="233" y="5" width="71" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" title="+">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="+"/>
                                 <connections>
                                     <segue destination="7fO-Xm-8A8" kind="modal" id="QUc-GC-X1R"/>
                                 </connections>
